# PrusaSlicer

./: CMakeLists.txt
cmake/modules/: FindFilesystem.cmake  FindOpenVDB.cmake  FindTBB.cmake
debian/: changelog  control  copyright  gbp.conf  prusa-slicer.1  prusa-slicer.desktop  prusa-slicer.install  prusa-slicer.manpages  prusa-slicer.sharedmimeinfo  prusaslicer.desktop  prusaslicer.install  rules
debian/patches/: fix-gizmo-icon-size.patch  handle-wx-assert-with-boost.patch  mode-switching-fix.patch  series  version-name.patch
resources/avrdude/: avrdude.conf
resources/localization/: list.txt
resources/models/: mk2_bed_tex.stl  mk3_bed_tex.stl
resources/profiles/: Creality.ini  PrusaResearch.ini  common.0.0.1.ini  common.0.0.2.ini  common.idx
resources/shaders/: distance_field.fs  distance_field.vs  gouraud.fs  gouraud.vs  mm_contour.fs  phong.fs  phong.vs  printbed.fs  sdf.fs  sdf.vs
sandboxes/: CMakeLists.txt
sandboxes/aabbtree/: CMakeLists.txt  aabbtree.cpp
src/: CMakeLists.txt  PrusaSlicer.cpp  PrusaSlicer_app_msvc.cpp  slabasebed.cpp  slasupporttree.cpp
src/admesh/: stl.h
src/detours/: detours.lib
src/gmp/: README
src/libnest2d/: CMakeLists.txt
src/libslic3r/: AppConfig.cpp  Arrange.cpp  BoundingBox.cpp  BoundingBox.hpp  Brim.cpp  CMakeLists.txt  (+87 more)
t/: gcode.t
tests/: test_utils.hpp
tests/sla_print/: CMakeLists.txt  sla_lineUtils_tests.cpp  sla_parabola_tests.cpp  sla_print_tests.cpp  sla_raycast_tests.cpp  sla_supptgen_tests.cpp  sla_test_utils.cpp  sla_vectorUtils_tests.cpp  sla_voronoi_graph_tests.cpp
xs/: CMakeLists.txt
(+306 files in other folders)
